[metadata]
name = networking-brocade
summary = Brocade Networking Mech. Drivers and Plugins
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
packages =
    networking_brocade
version = 2015.1.1

[files]
packages =
    networking_brocade

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_brocade/locale
domain = networking-brocade

[update_catalog]
domain = networking-brocade
output_dir = networking_brocade/locale
input_file = networking_brocade/locale/networking-brocade.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_brocade/locale/networking-brocade.pot

[entry_points]
console_scripts =
    vyatta-fake-agent = networking_brocade.vyatta.common.l3_agent:main
    vyatta-vpn-fw-agent = networking_brocade.vyatta.vpn_fw_agent:main
