[metadata]
name = networking-brocade
summary = Brocade Networking Mech. Drivers and Plugins
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
packages =
    networking_brocade
version = 2015.1.1

[files]
packages =
    networking_brocade
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_brocade_fi_ni.ini
        etc/neutron/plugins/brocade/brocade_mlx.ini

[entry_points]
neutron.ml2.mechanism_drivers =
    brocade_fi_ni = networking_brocade.mlx.ml2.fi_ni.mechanism_brocade_fi_ni:BrocadeFiNiMechanism

# Service Plugins
neutron.service_plugins =
    brocade_mlx_l3 = networking_brocade.mlx.services.l3_router.brocade.l3_router_plugin.BrocadeRouterPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_brocade/locale
domain = networking-brocade

[update_catalog]
domain = networking-brocade
output_dir = networking_brocade/locale
input_file = networking_brocade/locale/networking-brocade.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_brocade/locale/networking-brocade.pot
